--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,6 +1,6 @@
-primary_name: "Your Name"
+primary_name: "Angel G. Rivera-Colón"
 secondary_name: ""
-navbar_name: "Your Name"
+navbar_name: "Angel G. Rivera-Colón"
 
 positions:
 - logo: /assets/images/badges/MIT_Social_circle.png  # Logo is optional
@@ -8,26 +8,22 @@ positions:
 - name: Position 2 without logo
 
 
-email: "your@email.com"
+email: "ariverac@uoregon.edu"
 # cv_link: link-to-your-cv-file
-gscholar: xFmQpf4AAAAJ  # This is an example, replace it with your own Google Scholar ID
-github: your_github_id
-twitter: your_twitter_id  # Do not include the '@' symbol
+gscholar: 7yec5K8AAAAJ # This is an example, replace it with your own Google Scholar ID
+github: arcolon14
+twitter: arcolon14  # Do not include the '@' symbol
 # wechat_qrcode: /assets/images/etc/wechat.jpg
 # wechat_prompt: >-
 #   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
 # linkedin: your-linked-in-id
-# orcid: 0000-0000-0000-0000
+bluesky: arcolon14.bsky.social
+orcid: 0000-0001-9097-3241
 
 short_bio_text_justify: false
 short_bio: >-
   <p>
-    A <a href="https://en.wikipedia.org/wiki/Bicolor_cat" target="_blank">bicolor cat</a> is a cat with white fur combined with fur of some other colour, for example solid black, tabby, or colourpointed.
-  </p>
-  <p>
-    There are various patterns of a bicolour cat. These range from the Van-patterned (colour on the crown of the head 
-    and the tail only) to a solid colour with a throat locket or medallion. Bicolour coats are found in many cat breeds, 
-    as well as being common in domestic longhair and domestic shorthair cats.
+  Postdoc Kern-Ralph co-lab the University of Oregon. Website currently in progress. Information below might be from the template.
   </p>
 
 portrait_url: /assets/images/photos/portrait.jpg
